--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
 		"noEmit": true,
 		"isolatedModules": true
 	},
-	"include": ["src", "test"],
+	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
 }
