--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 	},
 	"dependencies": {
 		"clipanion": "3.2.0-rc.12",
-		"ts-morph": "16.0.0"
+		"ts-morph": "16.0.0",
+		"typanion": "^3.12.0"
 	},
 	"devDependencies": {
 		"@sachinraja/eslint-config": "0.1.1",
