--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"dependencies": {
 		"clipanion": "3.2.0-rc.12",
+		"preferred-pm": "^3.0.3",
 		"ts-morph": "16.0.0",
 		"typanion": "^3.12.0"
 	},
