--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
 	},
 	"dependencies": {
 		"clipanion": "3.2.0-rc.12",
+		"lodash-es": "^4.17.21",
 		"ts-morph": "16.0.0",
 		"typanion": "^3.12.0"
 	},
 	"devDependencies": {
 		"@sachinraja/eslint-config": "0.1.1",
 		"@trpc/server": "9.27.2",
+		"@types/lodash-es": "^4.17.6",
 		"@types/node": "18.7.14",
 		"dprint": "0.31.1",
 		"eslint": "8.23.0",
