--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,8 +14,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2.2.2
-        with:
-          version: 7
 
       - uses: actions/setup-node@v3
         with:
@@ -27,3 +25,6 @@ jobs:
 
       - name: Lint
         run: pnpm lint
+
+      - name: Test
+        run: pnpm test
